# oi-git

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  index.html
assets/audio/sfx/: 453177__benege__nasal-spray-single-stereo.flac
assets/code/: code.txt
assets/logo/: logo.kra  logo_gitco.kra
assets/office/: floorplan.mtl  floorplan.sh3d  office.blend  office.blend1  office.glb  office_proto_noceil.blend  office_proto_noceil.blend1  office_proto_noceil.glb  room.glb  room_noceil.blend  room_noceil.blend1  room_noceil.glb  room_proto_noceil.glb  terminal.glb
assets/office/ceiling/: ceilingtexture.xcf
assets/office/computer/: room_noceil.glb  terminal.kra
assets/office/desk/: desk.glb  desk_proto.glb
assets/office/devtextures/: print-resources.rs
assets/office/door/: door.glb  door_proto.glb  doortexture.kra  doortexture.xcf
assets/office/floor/: floortexture.xcf
assets/office/light/: lights.glb  lighttexture.xcf
assets/office/processor/: processor_ee.glb  processor_nn.glb  processor_nn_texture.xcf  processor_pp.glb  processor_pp_texture.xcf
assets/office/screen/: rendertarget.glb  screen.glb
assets/office/stool/: stooltexture.xcf  stooltexture6464.xcf
assets/office/wall/: wall_collider.glb  walltexture.xcf
assets/office/window/: deletertexture.xcf  whiteboard.kra  window.glb  window_proto.glb  windowtexture.xcf
assets/tools_and_viewmodels/: hammer.glb  hammertexture.xcf  plank_notexture.glb  plank_notexture1.glb  tools.blend  tools.blend1
src/: asset.rs  audio.rs  code.rs  collider.rs  config.rs  debug.rs  grab_cursor.rs  interactable.rs  level.rs  main.rs  main_scene.rs  office.rs  player.rs  prelude.rs  score.rs  state.rs  terminal.rs  text_sprite.rs  tools.rs  ui.rs  utils.rs  vc_bevy_jam_2.rs  viewmodel.rs
src/office/: data.rs  load.rs  spawn.rs
src/player/: fsm.rs  interactions.rs  look.rs  movement.rs  spawn.rs
src/terminal/: conv_cp437.rs  screen.rs  spawn.rs  text_sprite.rs
src/utils/: phys.rs
