[workspace]
resolver = "2"
members = []

[package]
name = "vc-bevy-jam-2"
version = "0.1.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
readme = "README.md"
description = """
Short description goes here.
"""
#license = "MIT OR Apache-2.0"
#repository = "https://github.com/USERNAME/vc-bevy-jam-2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bevy = { version = "0.8", features = ["default"] }

#[patch.crates-io]
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
