[workspace]
resolver = "2"
members = []

[package]
name = "vc-bevy-jam-2"
version = "0.1.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
readme = "README.md"
description = """
Short description goes here.
"""
#license = "MIT OR Apache-2.0"
#repository = "https://github.com/USERNAME/vc-bevy-jam-2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
editor = ["bevy_editor_pls"]
show_collider = ["bevy_rapier3d/debug-render"]
perf = []
web = ["perf", "getrandom/js"]
dynamic = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["animation", "bevy_asset", "bevy_winit", "bevy_gilrs", "bevy_scene",  "hdr", "filesystem_watcher", "render", "png", "x11"] }
bevy_asset_loader = { version = "0.12", features = ["2d", "3d", "stageless"] }
iyes_loopless = { version = "0.7.1", features = ["default"] }
bevy_rapier3d = "0.16"
rand = { version = "0.8" , features = ["small_rng"]}
getrandom = { version = "0.2", features = ["rdrand"] }
console_error_panic_hook = "0.1"
bevy_kira_audio = { version = "0.12.0", features = ["ogg"] }

#[patch.crates-io]
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }

[dependencies.bevy_editor_pls]
git = "https://github.com/jakobhellermann/bevy_editor_pls.git"
branch = "main"
version = "0.1.1"
optional = true

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
